--- a/client/public/index.html
+++ b/client/public/index.html
@@ -18,8 +18,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <link rel="stylesheet", type="text/css", href="/stylesheets/styles.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <link rel="stylesheet", type="text/css", href="../stylesheets/styles.css">
 
     <title>React App</title>
   </head>
@@ -38,6 +37,5 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-    <script src="%PUBLIC_URL%/javascripts/main.js"></script>
   </body>
 </html>
